# vibewatch

./: .gitignore  .mise.toml  CHANGELOG.md  Cargo.toml  Justfile  LICENSE  README.md
.githooks/: README.md  pre-commit  pre-push
.github/: branch-protection.json  copilot-instructions.md
.github/workflows/: ci.yml  release.yml
benches/: README.md  path_normalization.rs  pattern_matching.rs  template_substitution.rs
docs/: CI_CD.md  RELEASE_PLEASE_SETUP.md
src/: filter.rs  main.rs  watcher.rs
tests/: filesystem_utils_tests.rs  it.rs
tests/common/: mod.rs
