[package]
name = "vibewatch"
version = "0.1.0"
edition = "2024"
description = "A file watcher utility with glob pattern support"
authors = ["Rodrigo Gomes"]
license = "BSD-3-Clause"



[dependencies]
# CLI argument parsing
clap = { version = "4.5", features = ["derive", "help", "usage", "wrap_help", "string"] }
# File system watching
notify = "8.2"
# Glob pattern matching
glob = "0.3"
# Error handling
anyhow = "1.0"
# Logging
log = "0.4"
env_logger = "0.11"
# Async runtime for command execution
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "time", "sync", "signal"] }
# Shell-like command parsing with quote support
shell-words = "1.1"

[dev-dependencies]
# Mocking framework
mockall = "0.13"
# Temporary file/directory utilities for testing
tempfile = "3.13"
# Async testing utilities
tokio-test = "0.4"
# Parameterized testing
rstest = "0.26"
# Additional tokio features for testing
tokio = { version = "1.0", features = ["process", "rt-multi-thread", "macros", "test-util", "time"] }
# CLI integration testing
assert_cmd = "2"
# Filesystem fixtures and assertions
assert_fs = "1"
# Advanced assertions for testing
predicates = "3"
# Benchmarking framework
criterion = "0.5"

[[bench]]
name = "template_substitution"
harness = false

[[bench]]
name = "path_normalization"
harness = false

[[bench]]
name = "pattern_matching"
harness = false
